Bug 772502 - Remove custom focus rings on mobile. r=mfinkle
UltraBlame original commit: 1e6251d8d492d7044a7b514c9dbb056dbf2c4503

--- a/mobile/android/themes/core/content.css
+++ b/mobile/android/themes/core/content.css
@@ -8,19 +8,6 @@
 @namespace url("http://www.w3.org/1999/xhtml");
 @namespace xul url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
-
-* > *:not(embed):focus, * > *:focus > font {
-  outline: 2px solid @color_background_highlight@ !important;
-  
-
-
-
-}
-
-*:-moz-any-link:focus {
-  outline-offset: -2px;
-}
-
 ::-moz-selection {
   background-color: @color_background_highlight@;
   color: @color_text_highlight@;
